# protect_scaffold

./: .gitignore  Dockerfile  README.md  diagnostics.py  makefile  pyproject.toml  troubleshooting.md
src/my_project/: main.py
